--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,14 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
